src/test/deca/syntax/valid/SansObjet/Inst8-While-ComplexCondition.deca
// Description:
//    While structure with complex condition.
//
// Results:
//    (void)
//
// Historique:
//    cree le 08/01/2022

{
        while (x = y + z) { ; }
}
